@@ -121,6 +121,7 @@ class RequestHandlerFactory:
         self._secure_proxy_ssl_header = secure_proxy_ssl_header
         self._kwargs = kwargs
         self._kwargs.setdefault('logger', app.logger)
+        self.num_connections = 0
 
     @property
     def secure_proxy_ssl_header(self):
@@ -170,6 +171,7 @@ class RequestHandlerFactory:
         self._connections.clear()
 
     def __call__(self):
+        self.num_connections += 1
         return self._handler(
             self, self._app, self._router, loop=self._loop,
             secure_proxy_ssl_header=self._secure_proxy_ssl_header,
